2006-09-28 1.0 * Release
- Cleaned up source from unused functions and lines
- Added some comments
- Modified license to GPLv2